# npm-stats

./: .dockerignore  .env.example  .env.standalone  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .pyre_configuration  BARE_METAL_INSTALL.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  entrypoint-ai.sh  entrypoint-api.sh  entrypoint-cron-worker.sh  entrypoint-log-worker.sh  entrypoint-ui.sh  entrypoint-worker.sh  entrypoint.sh  pyproject.toml  requirements.txt  run.py  test.txt
.gitea/workflows/: ci.yaml  ci.yml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 529a2917bbe4_add_totp_secret.py  600a2917bbe4_add_traffic_partitions.py  700a2917bbe4_add_performance_indexes.py  7e18e79cbb1c_initial_schema.py  a9e59dcedb7f_partition_traffic_table.py
docs/: API.md  ARCHITECTURE.md  ENTERPRISE_FEATURES.md  HOST_IPTABLES.md
pages/: 1_📊_Overview.py  2_🔎_IP_Analysis.py  3_🚫_Blocking.py  4_⚙️_Settings.py  5_🤖_AI_Assistant.py  6_📈_Live_Monitor.py  7_🏥_System_Status.py
scripts/: backup-db.sh  install-iptables.sh  migrate-to-local.sh  npm-monitor-iptables.service  npm-monitor-iptables.timer  sync-iptables.sh  test_firewall_integration.py
scripts/systemd/: npm-ai.service  npm-api.service  npm-cron-worker.service  npm-log-worker.service  npm-ui.service
src/: __init__.py  ai_analyzer.py  app.py  auth.py  blocking.py  cloudflare_waf.py  config.py  cron_worker.py  crowdsec.py  database.py  database.py_info_patch.txt  firewall.py  log_parser.py  log_worker.py  notifications.py  sync.py  sync_scheduler.py  ui_utils.py  utils.py
src/api/: main.py
src/components/: __init__.py  blocking.py  charts.py  maps.py  sidebar.py  tables.py
src/utils/: __init__.py  ai_assistant.py  briefings.py  docker_info.py  health.py  npm_sync.py  reports.py  whois.py
tests/: conftest.py  test_api.py  test_auth.py  test_blocking.py  test_blocking_integration.py  test_config.py  test_database.py  test_firewall.py  test_log_parser.py  test_notifications.py  test_utils.py
