[project]
name = "npm-monitor"
version = "0.1.0"
description = "Traffic-Monitoring-Dashboard für Nginx Proxy Manager (NPM)."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "geoip2>=4.8.0",
    "ipwhois>=1.2.0",
    "requests>=2.31.0",
    "pandas>=2.0.0",
    "psycopg[binary,pool]>=3.2.4",
    "python-dateutil>=2.8.2",
    "sqlalchemy>=2.0.0",
    "streamlit>=1.30.0",
    "streamlit-autorefresh>=1.0.1",
    "pymysql>=1.1.0",
    "cryptography>=42.0.0",
    "fpdf2>=2.7.0",
    "pydeck>=0.8.0",
    "folium>=0.15.0",
    "streamlit-folium>=0.17.0",
    "alembic>=1.18.4",
    "redis>=7.3.0",
    "pyotp>=2.9.0",
    "qrcode>=8.2",
    "pillow>=10.2.0",
    "prometheus-client>=0.24.1",
    "watchdog>=6.0.0",
    "fastapi>=0.135.1",
    "uvicorn>=0.41.0",
    "pydantic>=2.12.5",
    "gunicorn>=25.1.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.1.0",
    "pytest>=8.3.4",
    "ruff>=0.9.9",
]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
]
ignore = [
    "E501",  # line too long, handled by black/ruff format
]
